DABOM-146 refactor: 제네릭 raw 타입 제거, nullable result 처리 (소나큐브 반영)